<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hello.kz</string>
    <string name="main_page_title">Hello.kz Quality Club</string>
    <string name="filter_button">Фильтр</string>
    <string name="apply_disсount">Использовать скидку</string>
    <string name="internet_access">Интернет не доступен на данном девайсе!</string>
    <string name="confirm_discount">Получить скидку!</string>
    <string name="updater_title">Обновления</string>
    <string name="updater_ok">Обновить</string>
    <string name="updater_canacel">Позже</string>
    <string name="update_to_newer_version">
        Доступна новая версия приложения: %1$s.
        Хотите обновиться?
    </string>
    <string name="force_update_to_newer_version">
        Данная версия приложения уже не поддерживается, пожалуйста, скачайте новую версию!
    </string>
    <string name="no_thumbnail">Нет изображения</string>
    <string name="priceLabel">Для продолжения введите полную сумму покупки в тенге:</string>
    <string name="priceWithDiscountLabel">После скидки:</string>
    <string name="discountApplyResultLabel">Номер скидки:</string>
    <string name="confirmerIdLabel">Подтверждатель:</string>
    <string name="erNoUserFound">Не найден пользователь</string>
    <string name="erNoDiscountFound">Не найдена скидка</string>
    <string name="erNoConfirmerFound">Не найден подтверждатель</string>
    <string name="erConfirmerIsNotOfThisCompany">Неверный подтверждатель</string>
    <string name="erCouldNotApply">Не получилось применить скидку</string>
    <string name="confirmButton">Go!</string>
    <string name="buyPrice">Сумма покупки</string>
    <string name="purchase">Покупка</string>
    <string name="activated">зарегистрирована</string>
    <string name="purchaseCode">Код скидки</string>
    <string name="priceWODiscountLabel">(цена без скидки)</string>
    <string name="priceTenge">%d тенге</string>
    <string name="unknownError">Произошла ошибка!</string><string name="authLabel">Войти</string><string name="loginLabel">Логин</string><string name="passLabel">Пароль</string><string name="athOnClick">athOnClick</string>

    <string name="authOk">Авторизован</string>
    <string name="authFail">Неверный логин или пароль!</string>
    <string name="authError">Произошла ошибка, попрбуйте еще раз!</string>
    <string name="authAlreadyExists">Такой пользователь уже зарегистрирован!</string>
    <string name="authShortLogin">Логин должен быть длиннее 5 символов!</string>
    <string name="authShortPass">Пароль должен быть длиннее 5 символов!</string>
    <string name="registerLabel">Зарегистрироваться</string>

</resources>
