<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@drawable/bg_with_stripes" android:baselineAligned="false"
        >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="12dp" android:background="#00a1d7">
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="6dp" android:background="#000000">
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp" android:gravity="center_vertical|center_horizontal">
    </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="350dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="8dp"
                android:layout_height="fill_parent" android:background="#222222">
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="25dp"
                android:layout_height="fill_parent" android:background="#252525">
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:background="#dcdcdc" android:layout_marginRight="6dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="280dp"
                        android:visibility="visible" android:paddingLeft="40dp" android:paddingTop="20dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/loginLabel"
                            android:id="@+id/textView" android:textColor="#000000"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/athLogin"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/passLabel"
                            android:id="@+id/textView2" android:textColor="#000000"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/athPass"/>
                    <Button
                            android:layout_width="100dp"
                            android:layout_height="45dp"
                            android:text="@string/authLabel"
                            android:id="@+id/athButton" android:layout_marginTop="10dp" android:background="#00a1d7"
                            android:textColor="#ffffff" android:textSize="16dp" android:textStyle="bold"
                            />
                    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/registerLabel"
                            android:id="@+id/regButton" android:layout_marginTop="15dp" android:background="#005683"
                            android:textColor="#ffffff" android:textSize="16dp" android:textStyle="bold"
                            android:paddingLeft="14dp" android:paddingRight="14dp"
                            android:paddingTop="7dp" android:paddingBottom="7dp" android:layout_marginBottom="10dp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <ProgressBar
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:id="@+id/athProgressBar" android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp" android:layout_marginBottom="25dp"
                            android:visibility="gone"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/authResult" android:textColor="#690006" android:layout_marginLeft="40dp"
                            android:singleLine="false" android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>